--- a/style.css
+++ b/style.css
@@ -9,8 +9,13 @@ video {
     max-width: 100%;
 }
 
+#slide {
+    display: grid;
+}
+
 #slide-elements {
     display: grid;
+    grid-area: 1/1;
 }
 
 #slide-elements > * {
@@ -22,4 +27,16 @@ video {
 #slide-elements > .active {
     opacity: 1;
     visibility: visible;
+}
+
+#slide-controls {
+    grid-area: 1/1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#slide-controls button {
+    appearance: none;
+    opacity: 0;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
