--- a/style.css
+++ b/style.css
@@ -1,42 +1,95 @@
 body {
-    font-family: sans-serif;
-    margin: 1.25rem;
+  font-family: sans-serif;
+  margin: 1.25rem;
+  background-color: #1b1d20;
+}
+
+body.paused {
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  touch-action: manipulation;
 }
 
 img,
 video {
-    display: block;
-    max-width: 100%;
+  display: block;
+  max-width: 100%;
 }
 
 #slide {
-    display: grid;
+  display: grid;
+  border-radius: 4px;
+  overflow: hidden;
+  margin: 100px auto;
+  max-width: 800px;
+  background: black;
 }
 
 #slide-elements {
-    display: grid;
-    grid-area: 1/1;
+  display: grid;
+  grid-area: 1/1;
 }
 
 #slide-elements > * {
-    grid-area: 1/1;
-    opacity: 0;
-    visibility: none;
+  grid-area: 1/1;
+  opacity: 0;
+  visibility: none;
 }
 
 #slide-elements > .active {
-    opacity: 1;
-    visibility: visible;
+  opacity: 1;
+  visibility: visible;
 }
 
 #slide-controls {
-    grid-area: 1/1;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+  grid-area: 1/1;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  position: relative;
 }
 
 #slide-controls button {
-    appearance: none;
-    opacity: 0;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  appearance: none;
+  opacity: 0;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+#slide-thumb {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  pointer-events: none;
+}
+
+#slide-thumb > span {
+  flex: 1;
+  display: block;
+  height: 4px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 5px;
+  border-radius: 4px;
+  overflow: hidden;
+  isolation: isolate;
+}
+
+#slide-thumb .thumb-item.active {
+  display: block;
+  height: inherit;
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 4px;
+  transform: translateX(-100%);
+  animation: thumb forwards linear running;
+}
+
+#slide-thumb .thumb-item.active.paused {
+  animation-play-state: paused;
+}
+
+@keyframes thumb {
+  to {
+    transform: initial;
+  }
 }
